--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test:gemini": "node scripts/test-gemini.mjs"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.16.2",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -29,6 +31,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.22",
+    "groq-sdk": "^0.34.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
